Issue #16197: Fix several small errors in winreg documentation.

Initial patch by Zachary Ware.